zeit.content.infobox changes
============================

1.23.5 (unreleased)
-------------------

- Nothing changed yet.


1.23.4 (2011-11-13)
-------------------

- Fix brown bag release


1.23.3 (2011-11-13)
-------------------

- Define security for InfoboxReference (for #8412).


1.23.2 (2010-05-03)
-------------------

- Using versions from the ZTK.


1.23.1 (2010-03-10)
-------------------

- Change the way asset interfaces are registered. This fixes isolation problems
  during tests (#6712).

1.23 (2009-07-28)
-----------------

- Infobox-Source zum Filtern per Suche angepasst (#4499).

1.22.2 (2009-06-08)
-------------------

- Tests für neuen WYSIWYG-Konverter angepasst.

1.22.1 (2009-06-05)
-------------------

- Registrierung via TypeDeclaration

1.22 (2009-05-28)
-----------------

- Aus zeit.cms extrahiert.