@@ -4,11 +4,12 @@
 from zeit.cms.i18n import MessageFactory as _
 import zc.form.field
 import zeit.cms.content.contentsource
+import zeit.cms.content.interfaces
 import zope.interface
 import zope.schema
 
 
-class IInfobox(zope.interface.Interface):
+class IInfobox(zeit.cms.content.interfaces.IXMLContent):
 
     supertitle = zope.schema.TextLine(title=_('Supertitle'))
 
